[package]
name = "bump_up_or_down"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sptr = "0.3.2"

[lib]
bench = false


[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}

[[bench]]
name = "benches"
harness = false

